@@ -1,3 +1,9 @@
+2005-07-12  Yoshinori K. Okuji  <okuji@enbug.org>
+
+	* kern/mm.c: Added much documentation.
+	(GRUB_MM_ALIGN_LOG2): When GRUB_CPU_SIZEOF_VOID_P is
+	8, set to 5 instead of 8.
+
 2005-07-10  Yoshinori Okuji  <okuji@enbug.org>
 
 	* DISTLIST: Added util/i386/pc/grub-mkimage.c.
